  the peer.URL class by replacing parse_str() by a handcrafted parser
  (friebe, Marius Rosoiu)
- Changed img.fonts.TrueTypeFont's constructor to throw an exception if
  the font cannot be found
  (friebe)
- Fixed Runtime::memoryUsage() and Runtime::peakMemoryUsage()
  (friebe)
- Fixed generics declaration parsing in create() and is()
  (friebe)

Features
~~~~~~~~
- Implemented equals() method in xml.Node
  (friebe)
- Changed InputStream, OutputStream, Reader and StreamTransfer in 
  io.streams as well as their implementations to be closeable
  (friebe)
- Changed rdbms.ResultSet and all its implementations to be closeable
  (friebe)
- Implemented ARM blocks in XP language, supported by lang.Closeable 
  interface in framework.
  (friebe)
- Added text.regex.Pattern::replaceWith() method
  (friebe)
- Changed text.regex.Pattern not to throw exceptions on malformed 
  patterns like Pattern::compile(), and instead defer pattern validation 
  until actually matching the pattern - performance improvement
  (friebe)
- Made io.File::copy() and io.File::move() accept io.File and io.Folder 
  instances in addition to strings.
  (friebe)
- Added values() method to util.collections.HashTable
  (friebe)
- Added support for multiple cookies in unittest.web.WebTestCase
  (kiesel, Felix Stahlberg)
- Added support for multiple header values to peer.http.HttpRequest
  (friebe)
- Implemented fluent interface for rdbms.finder API
  (friebe)
- Added ability to define regular expressions in @expect(withMessage)
  by using a forward slash as its first character.
  http://news.xp-framework.net/article/378/2010/09/18/
  (friebe)
- Added lang.ArrayType and lang.MapType classes to represent zero-based
  indexed lists of elements and key/value-pairs, respectively
  http://news.xp-framework.net/article/376/2010/09/18/
  (friebe)
- Added indexer access functionality, this(): this(array(1, 2, 3), 1)= 2
  http://news.xp-framework.net/article/379/2010/09/22/
  (friebe)